+ Fixes in GUI + FlowHandlers

--- a/AudioCore/src/net/pwojcik/audio/locale/messages_PL.properties
+++ b/AudioCore/src/net/pwojcik/audio/locale/messages_PL.properties
@@ -1,1 +1,3 @@
+Application_Title = Application
 LibraryManagement_TreeLabel=Biblioteka
+LibraryManagement_CanvasLabel=Zarz\u0105dzanie bibliotekami
