+ AudioDataProvider converted to LibraryDataManager + Javadocs

--- a/AudioCore/src/net/pwojcik/audio/locale/messages_PL.properties
+++ b/AudioCore/src/net/pwojcik/audio/locale/messages_PL.properties
@@ -1,3 +1,7 @@
 Application_Title = Application
+
 LibraryManagement_TreeLabel=Biblioteka
 LibraryManagement_CanvasLabel=Zarz\u0105dzanie bibliotekami
+LibraryManagement_AddDirectory=Dodaj folder
+LibraryManagement_RemoveSelected=Usu\u0144 zaznaczone
+LibraryManagement_Update=Aktualizuj
