--- a/AudioCore/src/net/pwojcik/audio/locale/messages_PL.properties
+++ b/AudioCore/src/net/pwojcik/audio/locale/messages_PL.properties
@@ -5,3 +5,12 @@ LibraryManagement_CanvasLabel=Zarz\u0105dzanie bibliotekami
 LibraryManagement_AddDirectory=Dodaj folder
 LibraryManagement_RemoveSelected=Usu\u0144 zaznaczone
 LibraryManagement_Update=Aktualizuj
+LibraryManagement_DirectoryChooserTitle=Dodaj katalogi
+LibraryManagement_AddDirectoryNotificationTitle=Biblioteka multimediów
+LibraryManagement_AddDirectoryNotificationMessage=\u0141\u0105czna liczba dodanych utworów: {0}
+LibraryManagement_RemoveDirectoryNotificationTitle=Biblioteka multimediów
+LibraryManagement_RemoveDirectoryNotificationMessage=Usuni\u0119to zaznaczone pozycje.
+LibraryManagement_UpdateNotificationTitle=Biblioteka multimediów
+LibraryManagement_UpdateNotificationMessage=Zmiany zosta\u0142y zapisane
+LibraryManagement_UpdateAlertTitle=Aktualizacja biblioteki
+LibraryManagement_UpdateAlertHeader=Czy na pewno chcesz nadpisa\u0107 zmiany w bibliotece?
